ISSUE-51 - Rename task-jdbc to task-jdbc-commons as it is basis for all jdbc based connectors